# advent

./: .gitignore  README.md  template.cpp
2015/: 01.ipynb  02.ipynb  03.ipynb  04.ipynb  05.ipynb  06.ipynb  07.ipynb  08.ipynb  09.ipynb  10.ipynb  11.ipynb  12.ipynb  13.ipynb  14.ipynb  15.ipynb  16.ipynb  17.ipynb  18.ipynb  19.ipynb  21.ipynb  23.ipynb  25.ipynb
2016/: 10.ipynb  12.ipynb  14.ipynb
2017/: .gitignore  day01.ts  day02.ts  package-lock.json  package.json  tsconfig.json
2018/: Cargo.toml
2018/fortran/: fpm.toml
2018/fortran/app/: main.f90
2018/fortran/src/: day01.f90  day02.f90  day03.f90  day04.f90  day05.f90  day06.f90
2018/rust/src/days/: day_01.rs  mod.rs
2018/src/: day_01.rs  inputs.rs  main.rs
2018/src/days/: day.template  day_01.rs  day_02.rs  day_03.rs  day_04.rs  mod.rs
2019/: 01.cpp  03.cpp  04.cpp  19.cpp  Cargo.toml
2020/: 02.ipynb  04.ipynb  (+10 more)
2022/: Cargo.toml
2022/src/: inputs.rs  main.rs
2022/src/days/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
2023/: Cargo.toml
2023/src/: inputs.rs
2023/src/days/: day_01.rs  day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs  day_07.rs  day_08.rs  day_09.rs  day_10.rs  day_11.rs  day_12.rs  day_13.rs  day_14.rs  day_15.rs  day_16.rs  day_17.rs  day_18.rs  day_19.rs  day_20.rs  day_21.rs  day_22.rs  day_23.rs  day_24.rs  day_25.rs  mod.rs
(+124 files in other folders)
