[package]
name = "aoc-2018"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
automod = "1.0"
chrono = "0.4"
dhat = "0.3"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1"

[profile.release]
debug = 1

[features]
dhat-heap = []
