[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[dependencies]
automod = "1.0"
gif = "0.12.0"
itertools = "0.10"
lazy_static = "1.4"
ndarray = "0.15"
nom = "7.1"
num = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
