[package]
name = "aoc-2023"
version = "0.1.0"
edition = "2021"

[profile.release]
debug = true

[profile.test]
opt-level = 3

[dependencies]
anyhow = "1.0"
automod = "1.0"
gif = "0.12"
hashbrown = "0.14"
itertools = "0.10"
lazy_static = "1.4"
ndarray = "0.15"
nom = "7.1"
num = "0.4"
priority-queue = "1.3"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
strum = "0.24"
strum_macros = "0.24"
